--- a/docroot/profiles/labp/themes/la/lasbptheme/sass/components/hero/_hero__half-width.scss
+++ b/docroot/profiles/labp/themes/la/lasbptheme/sass/components/hero/_hero__half-width.scss
@@ -48,6 +48,7 @@
       padding-top: 90px;
       @include window_size(desktop) {
         padding-top: 125px;
+        max-width: 100%;
       }
     }
   }
